--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,23 +1,27 @@
-.container {
+.home-container {
+    width: 100%;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     position: relative;
+    flex-direction: column;
+    background-color: black;
 }
-.container .title{
+.home-container .title{
     color: white;
     border-bottom: 1px solid white;
     position: absolute;
     top: 5%;
     left: auto;
 }
-.container .subtitle{
+.home-container .subtitle{
     color: white;
     position: absolute;
     top: 15%;
     left: auto;
 }
-.container .btn {   
+.home-container .btn {   
     position: absolute;
     top: 74%;
     left: auto;
@@ -37,7 +41,7 @@
     .wallpaperdesktop {
         display: none;
     }
-    .container .btn  {
+    .home-container .btn  {
         top: 80%;
     }
 }
@@ -46,7 +50,4 @@
     .wallpaperphone {
         display: none;
     }
-}
-.btn {
-    align-items: flex-end;
 }
