--- a/src/styles/list.css
+++ b/src/styles/list.css
@@ -4,18 +4,16 @@
     margin-top: 80px;
 }
 
-.card {
-    border: 1px solid yellow;
-
-}
-
 .card .card-name {
     border-bottom: 1px solid black;
 }
+
 h1 {
-    border-bottom: 1px solid black;
+    color: white;
+    height: 60px;
 }
 .header-container {
+    background-color: black;
     text-align: center;
 }
 .buttons-container{
