--- a/src/styles/list.css
+++ b/src/styles/list.css
@@ -7,17 +7,12 @@
 .card .card-name {
     border-bottom: 1px solid black;
 }
-/* .card-container {
-    border: 1px solid black;
-    box-shadow: 5px 8px;
-
-} */
 .card-body {
-    border: 2px solid black;
+    border: 1px solid black;
 
 }
 .card-img-top {
-    border: 3px solid black;
+    border: 1px solid black;
 
 }
 
@@ -35,9 +30,12 @@ h1 {
 }
 .next {
     margin-left: auto;
+    margin-right: 12px
 }
 .previous {
     margin-right: auto;
+    margin-left: 12px
+
 }
 .loader {
     display: flex;
@@ -47,4 +45,7 @@ h1 {
 .pageNumber {
     position: absolute;
     left: 50%
+}
+.position-loader {
+    margin: 100px;
 }
